--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
  
 <body>
-  <h1>YOUR NAME</h1>
+  <h1>Hi im Emmanuel Jackson</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
+ <h2>If your reading this and your name is Erin Bishop</h2>
+ 
+ <ul>
+  <li>I love you very much</li>
+  <li>I miss you very much</li>
+  <li>I think your the finest girl in all the lands</li>
+ </ul>
 </html>
